# Bartok

./: .gitignore  Bartok.cabal  DataTypes.hs  LICENSE  Lib.hs  README.md  Rules.hs  Sample.hs  Serialize.hs  ServerInterface.hs  Tests.hs  Views.hs  Web.hs  aideas.bartok  bartok.cabal  building.txt  home.html  index.html  lib.hs  mkwhitelist.sh  newRule.html  play.html  sample.hs  serve  stack.yaml  star.js  tideas.bartok  tutorialplan.md
App/: Serialize.hs  ServerInterface.hs  Web.hs  Whitelist.hs
App/Game/Bartok/: Serialize.hs  ServerInterface.hs  Web.hs  Whitelist.hs
Lib/: BaseGame.hs  DataTypes.hs  Lib.hs  RuleHelpers.hs  Rules.hs  Sample.hs  TLib.hs  TSample.hs  Tutorial.hs  Utils.hs  Views.hs
Lib/Game/Bartok/: BaseGame.hs  DataTypes.hs  RuleHelpers.hs  Rules.hs  Sample.hs  TLib.hs  TSample.hs  Tutorial.hs  Views.hs
doc/: BaseGame.html  DataTypes.html  Game-Bartok-BaseGame.html  Game-Bartok-DataTypes.html  Game-Bartok-RuleHelpers.html  Game-Bartok-Rules.html  Game-Bartok-Sample.html  Game-Bartok-TLib.html  Game-Bartok-TSample.html  Game-Bartok-Tutorial.html  Game-Bartok-Views.html  RuleHelpers.html  Rules.html  Sample.html  TLib.html  TSample.html  Views.html  bartok.txt  doc-index-126.html  doc-index-37.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-94.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  (+21 more)
doc/src/: BaseGame.html  DataTypes.html  Game.Bartok.BaseGame.html  Game.Bartok.DataTypes.html  Game.Bartok.RuleHelpers.html  Game.Bartok.Rules.html  Game.Bartok.Sample.html  Game.Bartok.TLib.html  Game.Bartok.TSample.html  Game.Bartok.Tutorial.html  Game.Bartok.Views.html  RuleHelpers.html  Rules.html  Sample.html  TLib.html  TSample.html  Views.html
static/: Testing.html  home.html  newRule.html  play.html  star.js  styles.css  wait.html
