-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                bartok
version:             0.1.0.2
-- synopsis:
description:
  Bartok is a card game where it is possible to change the rules.
  .
  This library contains functions to allow players to build their own rules.
  .
  When implementing rules, they should be well behaved, and interact well with other well behaved rules:
  .
      The set of players must not be modified (except on 'PlayerJoin' or 'PlayerLeave'). They may be rearranged, which will affect turn order but not seating order (so a change to turn order is not immediately obvious to players).
      .
      A rule should call either the inner ruleset or 'illegal' with the event it was passed and a potentially modified GameState
      .
      If a rule awards penalty cards, this must occur before invoking the inner rules. A rule is allowed to call the inner rules multiple times to work out whether a penatly should be awarded, but should add penalty cards to the original state, then call the inner rule again before returning.
-- homepage:            http://3dox.uk eventually?
license:             BSD3
license-file:        LICENSE
author:              Toby Cathcart Burn
maintainer:          tcathcartburn@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
      Lib
  exposed-modules:
      Game.Bartok.BaseGame
    , Game.Bartok.DataTypes
    , Game.Bartok.RuleHelpers
    , Game.Bartok.Rules
    , Game.Bartok.Sample
    , Game.Bartok.TLib
    , Game.Bartok.TSample
    , Game.Bartok.Tutorial
    , Game.Bartok.Views
    , Utils
  build-depends:
      aeson
    , base
    , containers
    , extra
    , lens
    , random
    , random-shuffle
    , regex-compat-tdfa
    , text
    , transformers
  default-language: 
    Haskell2010

executable server
  hs-source-dirs:
      App
  main-is:
    Game/Bartok/Web.hs
  build-depends:
      aeson
    , bartok
    , base
    , bytestring
    , containers
    , ctrie
    , extra
    , hint
    , http-types
    , lens
    , mtl
    , random
    , regex-compat-tdfa
    , text
    , time
    , transformers
    , wai
    , warp
  other-modules:
      Game.Bartok.Serialize
    , Game.Bartok.ServerInterface
    , Game.Bartok.Whitelist
  default-language:
    Haskell2010



-- test-suite tests
--   type: exitcode-stdio-1.0
--   main-is: Tests.hs
--   build-depends: base,lens,random-shuffle, transformers, containers, random, Bartok, split, text, case-insensitive
--   default-language:    Haskell2010
--   other-modules: Lib,Sample,DataTypes
--   hs-source-dirs: test
